tests/ui/issues/issue-58734.stderr
warning: trait objects without an explicit `dyn` are deprecated
  --> $DIR/issue-58734.rs:20:5
   |
LL |     Trait::nonexistent(());
   |     ^^^^^
   |
   = warning: this is accepted in the current edition (CrabLang 2015) but is a hard error in CrabLang 2021!
   = note: for more information, see <https://doc.crablang.org/nightly/edition-guide/crablang-2021/warnings-promoted-to-error.html>
   = note: `#[warn(bare_trait_objects)]` on by default
help: use `dyn`
   |
LL |     <dyn Trait>::nonexistent(());
   |     ++++      +

error[E0599]: no function or associated item named `nonexistent` found for trait object `dyn Trait` in the current scope
  --> $DIR/issue-58734.rs:20:12
   |
LL |     Trait::nonexistent(());
   |            ^^^^^^^^^^^ function or associated item not found in `dyn Trait`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `crablangc --explain E0599`.
